<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guilhermino.inventoryapp.DetailActivity">

    <ImageView
        android:layout_width="@dimen/image"
        android:layout_height="@dimen/image"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:text="@string/sale"
        android:id="@+id/sale_button"
        android:onClick="sale"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignStart="@+id/shipment_button" />

    <Button
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:text="@string/shipment"
        android:onClick="shipment"
        android:id="@+id/shipment_button"
        android:layout_below="@+id/sale_button"
        android:layout_alignStart="@+id/delete_button" />

    <Button
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="order"
        android:id="@+id/order_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:onClick="delete"
        android:id="@+id/delete_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/textStyle"
        android:text="@string/name"
        android:id="@+id/name_text_view"
        android:layout_centerVertical="true"/>

    <TextView
        style="@style/textStyle"
        android:text="@string/quantity"
        android:id="@+id/quantity_text_view"
        android:layout_below="@+id/name_text_view" />

    <TextView
        style="@style/textStyle"
        android:text="@string/price"
        android:id="@+id/price_text_view"
        android:layout_below="@+id/quantity_text_view"/>

    <TextView
        style="@style/textStyle"
        android:text="@string/availability"
        android:id="@+id/available_text_view"
        android:layout_below="@+id/price_text_view"/>

    <TextView
        style="@style/textStyle"
        android:text="@string/supplier"
        android:id="@+id/supplier_text_view"
        android:layout_below="@+id/available_text_view"/>

</RelativeLayout>