<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_edit_text"
        android:hint="@string/name_hint"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/price_edit_text"
        android:hint="@string/price_hint"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/quantity_edit_text"
        android:hint="@string/quantity_hint"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/supplier_edit_text"
        android:hint="@string/supplier_hint"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        android:layout_gravity="center_horizontal"
        android:onClick="takePicture"/>

</LinearLayout>